--- a/.github/workflows/validate_xml_with_xsd.yml
+++ b/.github/workflows/validate_xml_with_xsd.yml
@@ -1,39 +1,83 @@
+# .github/workflows/validate_xml_with_xsd.yml
 name: Validate PVCollada XML examples
 
 on:
   push:
     paths:
-      - schema/pvcollada_schema_0.1.xsd
-      - schema/collada_schema_1_5.xsd
+      - Examples/**
+      - schema/**
       - .github/workflows/validate_xml_with_xsd.py
       - .github/workflows/validate_xml_with_xsd.yml
 
-      - Examples/05 - VerySimpleFixedPVC2_with_electrical_layout_v3.pvc
   pull_request:
     paths:
-      - schema/pvcollada_schema_0.1.xsd
-      - schema/collada_schema_1_5.xsd
+      - Examples/**
+      - schema/**
       - .github/workflows/validate_xml_with_xsd.py
       - .github/workflows/validate_xml_with_xsd.yml
 
-      - Examples/05 - VerySimpleFixedPVC2_with_electrical_layout_v3.pvc
   workflow_dispatch:
 
 jobs:
-  validate-schema:
-    strategy:
-      matrix:
-        xml_doc:
-          - Examples/05 - VerySimpleFixedPVC2_with_electrical_layout_v3.pvc
-    name: Validate XML
+  discover:
+    name: Discover 2-digit example files
     runs-on: ubuntu-latest
+    outputs:
+      matrix: ${{ steps.build.outputs.matrix }}
+    steps:
+      - uses: actions/checkout@v4
+      - id: build
+        shell: bash
+        run: |
+          python3 - <<'PY'
+          import json, re, pathlib
+          root = pathlib.Path("Examples")
+          pattern = re.compile(r"^\d{2} .+\.pvc$", re.IGNORECASE)
+          files = []
+          if root.exists():
+              for p in sorted(root.iterdir()):
+                  if p.is_file() and pattern.match(p.name):
+                      files.append(f"{root}/{p.name}")
+          # Fallback if nothing matches (avoids empty-matrix error)
+          if not files:
+              files = []
+          matrix = {"xml_doc": files}
+          # Emit as an output
+          print(f"matrix={json.dumps(matrix)}")
+          PY
+          # Capture the printed JSON into the GHA output
+          echo "matrix=$(python3 - <<'PY'
+import json, re, pathlib, sys
+root = pathlib.Path("Examples")
+pattern = re.compile(r"^\d{2} .+\.pvc$", re.IGNORECASE)
+files = []
+if root.exists():
+    for p in sorted(root.iterdir()):
+        if p.is_file() and pattern.match(p.name):
+            files.append(f"{root}/{p.name}")
+matrix = {"xml_doc": files}
+print(json.dumps(matrix))
+PY
+)" >> "$GITHUB_OUTPUT"
+
+  validate-schema:
+    name: Validate XML
+    needs: discover
+    runs-on: ubuntu-latest
+    # Skip job cleanly if no files matched (prevents a matrix on an empty list)
+    if: ${{ fromJSON(needs.discover.outputs.matrix).xml_doc && join(fromJSON(needs.discover.outputs.matrix).xml_doc) != '' }}
+    strategy:
+      fail-fast: false
+      matrix: ${{ fromJSON(needs.discover.outputs.matrix) }}
     steps:
       - name: Install Python 3.10
         uses: actions/setup-python@v5
         with:
           python-version: "3.10"
+
       - name: Install lxml Python dependency
         run: pip3 install lxml==5.3.1
+
       - name: Checkout PVCollada and COLLADA schemas, the validation script, and the XML doc
         uses: actions/checkout@v4
         with:
@@ -43,6 +87,10 @@ jobs:
             .github/workflows/validate_xml_with_xsd.py
             ${{ matrix.xml_doc }}
           sparse-checkout-cone-mode: false
+
       - name: Run validation
         working-directory: schema
-        run: python3 "$GITHUB_WORKSPACE"/.github/workflows/validate_xml_with_xsd.py pvcollada_schema_0.1.xsd "$GITHUB_WORKSPACE"/"${{ matrix.xml_doc }}"
+        run: |
+          python3 "$GITHUB_WORKSPACE"/.github/workflows/validate_xml_with_xsd.py \
+            pvcollada_schema_0.1.xsd \
+            "$GITHUB_WORKSPACE"/"${{ matrix.xml_doc }}"
