--- a/.github/workflows/validate_xml_with_xsd.yml
+++ b/.github/workflows/validate_xml_with_xsd.yml
@@ -29,7 +29,7 @@ jobs:
       - id: build
         shell: bash
         run: |
-          python3 - <<'PY'
+          python3 - <<'PY' > matrix.json
           import json, re, pathlib
           root = pathlib.Path("Examples")
           pattern = re.compile(r"^\d{2} .+\.pvc$", re.IGNORECASE)
@@ -38,27 +38,9 @@ jobs:
               for p in sorted(root.iterdir()):
                   if p.is_file() and pattern.match(p.name):
                       files.append(f"{root}/{p.name}")
-          # Fallback if nothing matches (avoids empty-matrix error)
-          if not files:
-              files = []
-          matrix = {"xml_doc": files}
-          # Emit as an output
-          print(f"matrix={json.dumps(matrix)}")
+          print(json.dumps({"xml_doc": files}))
           PY
-          # Capture the printed JSON into the GHA output
-          echo "matrix=$(python3 - <<'PY'
-import json, re, pathlib, sys
-root = pathlib.Path("Examples")
-pattern = re.compile(r"^\d{2} .+\.pvc$", re.IGNORECASE)
-files = []
-if root.exists():
-    for p in sorted(root.iterdir()):
-        if p.is_file() and pattern.match(p.name):
-            files.append(f"{root}/{p.name}")
-matrix = {"xml_doc": files}
-print(json.dumps(matrix))
-PY
-)" >> "$GITHUB_OUTPUT"
+          echo "matrix=$(cat matrix.json)" >> "$GITHUB_OUTPUT"
 
   validate-schema:
     name: Validate XML
