Update of validation script
Update of validation script to validate all files with extension ".pv2" in the "Examples" folder

--- a/.github/workflows/validate_xml_with_xsd.yml
+++ b/.github/workflows/validate_xml_with_xsd.yml
@@ -32,7 +32,7 @@ jobs:
           python3 - <<'PY' > matrix.json
           import json, re, pathlib
           root = pathlib.Path("Examples")
-          pattern = re.compile(r"^\d{2} .+\.pvc$", re.IGNORECASE)
+          pattern = re.compile(r".+\.pv2$", re.IGNORECASE)
           files = []
           if root.exists():
               for p in sorted(root.iterdir()):
