--- a/.github/workflows/validate_xml_with_xsd.yml
+++ b/.github/workflows/validate_xml_with_xsd.yml
@@ -20,7 +20,7 @@ on:
 
 jobs:
   discover:
-    name: Discover 2-digit example files
+    name: Discover *.pv2 example files
     runs-on: ubuntu-latest
     outputs:
       matrix: ${{ steps.build.outputs.matrix }}
