--- a/.github/workflows/validate_xml_with_xsd_and_schematron.yml
+++ b/.github/workflows/validate_xml_with_xsd_and_schematron.yml
@@ -67,6 +67,7 @@ jobs:
             schema/pvcollada_schema_0.1.xsd
             schema/pvcollada_structure_2.0.sch
             schema/pvcollada_references_2.0.sch
+            schema/pvcollada_business_2.0.sch
             schema/collada_schema_1_5.xsd
             .github/workflows/validate_xml_with_xsd_and_schematron.py
             ${{ matrix.xml_doc }}
@@ -79,4 +80,5 @@ jobs:
             "$GITHUB_WORKSPACE"/"${{ matrix.xml_doc }}" \
             pvcollada_schema_0.1.xsd \
             pvcollada_structure_2.0.sch \
-            pvcollada_references_2.0.sch
+            pvcollada_references_2.0.sch \
+            pvcollada_business_2.0.sch
