Implementation of PVsyst specific extensions (#57)
* Implementation of PVsyst specific extensions (module, inverter and optimizer in the components part)

- Added XSD schema for PVsyst extensions
- Added schematron validation for PVsyst extensions
- Added example files
- Adjusted validation scripts to validate PVCollada standard and PVsyst extensions

* Modifications following comments

- Reworked hierarchy of folders
- Modified file names
- Modified profile name
- Adjusted validation scripts and example files accordingly

--- a/.github/workflows/validate_xml_with_xsd_and_schematron.yml
+++ b/.github/workflows/validate_xml_with_xsd_and_schematron.yml
@@ -30,14 +30,13 @@ jobs:
         shell: bash
         run: |
           python3 - <<'PY' > matrix.json
-          import json, re, pathlib
+          import json, pathlib
           root = pathlib.Path("Examples")
-          pattern = re.compile(r".+\.pvc2$", re.IGNORECASE)
           files = []
           if root.exists():
-              for p in sorted(root.iterdir()):
-                  if p.is_file() and pattern.match(p.name):
-                      files.append(f"{root}/{p.name}")
+              for p in sorted(root.rglob("*")):
+                  if p.is_file() and p.suffix.lower() == ".pvc2":
+                      files.append(str(p))
           print(json.dumps({"xml_doc": files}))
           PY
           echo "matrix=$(cat matrix.json)" >> "$GITHUB_OUTPUT"
@@ -68,35 +67,59 @@ jobs:
             schema/pvcollada_structure_2.0.sch
             schema/pvcollada_references_2.0.sch
             schema/pvcollada_business_2.0.sch
+            schema/extensions/pvsyst/pvcollada_2.0_pvsyst_schema_1.0.xsd
+            schema/extensions/pvsyst/pvcollada_2.0_pvsyst_structure_1.0.sch
+            schema/extensions/pvsyst/pvcollada_2.0_pvsyst_references_1.0.sch
             schema/collada_schema_1_5.xsd
             .github/workflows/validate_xml_with_xsd_and_schematron.py
             ${{ matrix.xml_doc }}
           sparse-checkout-cone-mode: false
 
-      - name: Validate against XSD Schema
+      - name: Validate against PVCollada XSD Schema
         working-directory: schema
         run: |
           python3 "$GITHUB_WORKSPACE"/.github/workflows/validate_xml_with_xsd_and_schematron.py \
             "$GITHUB_WORKSPACE"/"${{ matrix.xml_doc }}" \
             --xsd pvcollada_schema_2.0.xsd
 
-      - name: Validate against Structure Schematron
+      - name: Validate against PVCollada Structure Schematron
         working-directory: schema
         run: |
           python3 "$GITHUB_WORKSPACE"/.github/workflows/validate_xml_with_xsd_and_schematron.py \
             "$GITHUB_WORKSPACE"/"${{ matrix.xml_doc }}" \
             --schematron pvcollada_structure_2.0.sch
 
-      - name: Validate against References Schematron
+      - name: Validate against PVCollada References Schematron
         working-directory: schema
         run: |
           python3 "$GITHUB_WORKSPACE"/.github/workflows/validate_xml_with_xsd_and_schematron.py \
             "$GITHUB_WORKSPACE"/"${{ matrix.xml_doc }}" \
             --schematron pvcollada_references_2.0.sch
 
-      - name: Validate against Business Rules Schematron
+      - name: Validate against PVCollada Business Rules Schematron
         working-directory: schema
         run: |
           python3 "$GITHUB_WORKSPACE"/.github/workflows/validate_xml_with_xsd_and_schematron.py \
             "$GITHUB_WORKSPACE"/"${{ matrix.xml_doc }}" \
             --schematron pvcollada_business_2.0.sch
+            
+      - name: Validate against PVsyst extensions XSD Schema
+        working-directory: schema
+        run: |
+          python3 "$GITHUB_WORKSPACE"/.github/workflows/validate_xml_with_xsd_and_schematron.py \
+            "$GITHUB_WORKSPACE"/"${{ matrix.xml_doc }}" \
+            --xsd extensions/pvsyst/pvcollada_2.0_pvsyst_schema_1.0.xsd
+
+      - name: Validate against PVCollada extensions Structure Schematron
+        working-directory: schema
+        run: |
+          python3 "$GITHUB_WORKSPACE"/.github/workflows/validate_xml_with_xsd_and_schematron.py \
+            "$GITHUB_WORKSPACE"/"${{ matrix.xml_doc }}" \
+            --schematron extensions/pvsyst/pvcollada_2.0_pvsyst_structure_1.0.sch
+
+      - name: Validate against PVCollada extensions References Schematron
+        working-directory: schema
+        run: |
+          python3 "$GITHUB_WORKSPACE"/.github/workflows/validate_xml_with_xsd_and_schematron.py \
+            "$GITHUB_WORKSPACE"/"${{ matrix.xml_doc }}" \
+            --schematron extensions/pvsyst/pvcollada_2.0_pvsyst_references_1.0.sch
